# bedrock-playground

./: .gitignore  README.md  pyproject.toml
ask_chef/: bedrock_basic_prompt.py  main.py
flux_capacitor/: bedrock_chat_w_rag.py  main.py  vectordb_utils.py
flux_capacitor/vector_db/: chroma.sqlite3
streamlit/: bedrock_basic_prompt.py  main.py  utils.py
utils/: utils.py
